--- a/frontend/src/Components/Sidebar.scss
+++ b/frontend/src/Components/Sidebar.scss
@@ -1,12 +1,3 @@
-h1 {
-  margin: 0 0 64px 24px;
-  font-size: 28px;
-  font-weight: 900;
-  transform: scale(1, 0.9);
-  letter-spacing: 1px;
-  color: var(--sidebar-title);
-}
-
 .sidebar {
   border-radius: 0 15px 15px 0;
   background-color: var(--sidebar-background-grey);
@@ -20,3 +11,11 @@ h1 {
   flex-grow: 1;
 }
 
+.sidebarTitle {
+  margin: 0 0 64px 24px;
+  font-size: 28px;
+  font-weight: 900;
+  transform: scale(1, 0.9);
+  letter-spacing: 1px;
+  color: var(--sidebar-title);
+}
