--- a/frontend/src/Components/SidebarListEntry.scss
+++ b/frontend/src/Components/SidebarListEntry.scss
@@ -1,10 +1,3 @@
-label {
-  margin-left: 16px;
-  font-weight: 600;
-  color: var(--sidebar-entry-text-default);
-  cursor: pointer;
-}
-
 .entryRow {
   border-radius: 0 15px 15px 0;
   padding: 18px 0 18px 32px;
@@ -32,4 +25,11 @@ label {
   label {
     color: var(--sidebar-entry-text-selected);
   }
+}
+
+.entryRowLabel {
+  margin-left: 16px;
+  font-weight: 600;
+  color: var(--sidebar-entry-text-default);
+  cursor: pointer;
 }
