fe-3 add scss styling
fe-3 add scss styling w.i.p. 5

fe-3 add scss styling w.i.p. 6

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -22,6 +22,27 @@
   --sidebar-entry-text-selected: #201F24;
   --sidebar-entry-icon-selected: #277C78;
   --sidebar-entry-selected-background: #F8F4F0;
+
+  --page-background: #F8F4F0;
+  --component-background-dark: #201F24;
+  --component-background-bright: #FFFFFF;
+
+  --text-dark: #201F24;
+  --text-green: #277C78;
+  --text-grey: #696868;
+  --text-white: #FFFFFF;
+
+  --beige: #F2CDAC;
+  --dark-green: #277C78;
+  --dark-grey: #626070;
+  --light-blue: #82C9D7;
+
+  --beige-lightened: #F8DDC3;
+  --dark-green-lightened: #51A39E;
+  --dark-grey-lightened: #918F9A;
+  --light-blue-lightened: #A3DCE5;
+
+  --horizontal-line: #F2F2F2;
 }
 
 * {
