--- a/frontend/src/components/sidebar/Sidebar.scss
+++ b/frontend/src/components/sidebar/Sidebar.scss
@@ -1,8 +1,8 @@
 .sidebar {
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 16px 16px 0;
   background-color: var(--sidebar-background-grey);
   padding: 32px 24px 70px 0;
-  height: 1000px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
