--- a/frontend/src/components/sidebar/SidebarListEntry.scss
+++ b/frontend/src/components/sidebar/SidebarListEntry.scss
@@ -3,6 +3,7 @@
   padding: 18px 0 18px 32px;
   align-items: center;
   display: flex;
+  text-decoration: none;
   cursor: pointer;
 }
 .entryRow:hover {
