--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -26,6 +26,8 @@
   --page-background: #F8F4F0;
   --component-background-dark: #201F24;
   --component-background-bright: #FFFFFF;
+  --component-background-grey: #98908B;
+  --component-background-disabled: #F2F2F2;
 
   --text-dark: #201F24;
   --text-green: #277C78;
