--- a/frontend/src/components/transactions/searchbar/SearchbarDropdownCategory.scss
+++ b/frontend/src/components/transactions/searchbar/SearchbarDropdownCategory.scss
@@ -19,3 +19,15 @@
 .searchbarDropdownCategoryWrapper {
   position: relative;
 }
+.searchbarDropdownCategoryWrapper:hover {
+  .searchbarDropdownCategory {
+    border: 1px solid var(--component-background-grey);
+    background-color: var(--component-background-grey);
+    color: var(--text-white);
+    cursor: pointer;
+  }
+
+  .searchbarDropdownCategoryIcon {
+    filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(300%) contrast(100%);
+  }
+}
