--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -4,7 +4,7 @@
 
 .webapp {
   background-color: var(--page-background);
-  height: calc(100vh - 12px);
+  height: 100%;
   display: grid;
   grid-template-columns: 300px 1fr;
 }
