--- a/frontend/src/Pages/TransactionsPage.scss
+++ b/frontend/src/Pages/TransactionsPage.scss
@@ -22,7 +22,7 @@
 }
 
 .transactionsPagination {
-  margin-top: 9px;
+  margin-top: 6px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -38,5 +38,5 @@
 }
 
 .transactionsTable {
-  height: 100%;
+  height: 680px;
 }
