fe-11 add scss styling

--- a/frontend/src/components/overview/ValueBox.scss
+++ b/frontend/src/components/overview/ValueBox.scss
@@ -21,6 +21,9 @@
 .valueBoxBorder.light-blue {
   background-color: var(--light-blue);
 }
+.valueBoxBorder.sepia {
+  background-color: var(--page-background);
+}
 
 .valueBoxContent {
   display: flex;
