--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -46,6 +46,7 @@
   --light-blue-lightened: #A3DCE5;
 
   --horizontal-line: #F2F2F2;
+  --horizontal-line-darker: #E0E0E0;
 
   --searchbar-grey: #98908B;
 
