fe-11 fix broken unit tests

--- a/frontend/src/components/overview/ValueBox.scss
+++ b/frontend/src/components/overview/ValueBox.scss
@@ -22,7 +22,7 @@
   background-color: var(--light-blue);
 }
 .valueBoxBorder.sepia {
-  background-color: var(--page-background);
+  background-color: var(--sepia);
 }
 
 .valueBoxContent {
