--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -39,6 +39,7 @@
   --dark-green: #277C78;
   --dark-grey: #626070;
   --light-blue: #82C9D7;
+  --sepia: #F8F4F0;
 
   --beige-lightened: #F8DDC3;
   --dark-green-lightened: #51A39E;
