--- a/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
+++ b/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
@@ -1,7 +1,7 @@
 .budgetsDiagramCard {
   border-radius: 12px;
   background-color: var(--component-background-bright);
-  padding: 32px;
+  padding: 32px 32px 24px 32px;
   display: flex;
   flex-direction: column;
   row-gap: 32px;
@@ -18,7 +18,7 @@
   font-weight: 600;
 }
 
-.BudgetsDiagramCardRowLine {
+.budgetsDiagramCardDetailsLine {
   margin: 16px 0;
 }
 
