fe-17 add scss styling

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -34,6 +34,7 @@
   --text-green: #277C78;
   --text-grey: #696868;
   --text-white: #FFFFFF;
+  --text-red: #C94736;
 
   --beige: #F2CDAC;
   --dark-green: #277C78;
