fe-2 add logic for minimizing sidebar

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -6,5 +6,5 @@
   background-color: var(--page-background);
   height: 100%;
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: fit-content(100%) 1fr;
 }
