--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,6 +2,10 @@
 
 .content {
   height: 100%;
+
+  @include mixins.tablet-and-down() {
+    padding-bottom: 84px;
+  }
 }
 
 .webapp {
@@ -12,6 +16,6 @@
 
   @include mixins.tablet-and-down() {
     grid-template-columns: 1fr;
-    grid-template-rows: fit-content(100%) 1fr;
+    grid-template-rows: 1fr auto;
   }
 }
