--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,16 +1,16 @@
 @use './styles/mixins';
 
 .content {
-  height: 100%;
+  height: auto;
 
   @include mixins.tablet-and-down() {
-    padding-bottom: 84px;
+    padding-bottom: 81px;
   }
 }
 
 .webapp {
   background-color: var(--page-background);
-  height: 100%;
+  height: auto;
   display: grid;
   grid-template-columns: fit-content(100%) 1fr;
 
