--- a/frontend/src/components/sidebar/Sidebar.scss
+++ b/frontend/src/components/sidebar/Sidebar.scss
@@ -4,21 +4,27 @@
   border-radius: 0 16px 16px 0;
   background-color: var(--sidebar-background-grey);
   padding: 32px 24px 70px 0;
-  height: 100%;
+  height: calc(100% - 13px);
   width: 300px;
+  position: fixed;
   display: flex;
   flex-direction: column;
-  transition: width 0.5s ease;
+  transition: width 0.4s ease;
+  z-index: 10;
+
+  @include mixins.tablet-and-down(50) {
+    transition: width 0s ease;
+  }
 
   @include mixins.tablet-and-down() {
     border-radius: 16px 16px 0 0;
-    padding: 8px 0 0 0;
+    padding: 8px 0 13px 0;
     position: fixed;
     bottom: 0;
     height: auto;
     width: 100%;
     z-index: 10;
-    transition: width 0s ease, padding 0s ease;
+    transition: width 0s ease;
   }
 }
 .sidebar.minimized {
@@ -26,13 +32,13 @@
   padding: 32px 18px 70px 0;
 
   @include mixins.tablet-and-down() {
-    padding: 8px 0 16px 0;
+    padding: 8px 0 13px 0;
     width: 100%;
   }
 }
 
 .sidebarList {
-  height: 600px;
+  flex-grow: 1;
 
   @include mixins.tablet-and-down() {
     padding: 0 40px;
