--- a/frontend/src/components/overview/bills/OverviewBills.scss
+++ b/frontend/src/components/overview/bills/OverviewBills.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/mixins';
+
 .overviewBills {
   border-radius: 12px;
   background-color: var(--component-background-bright);
@@ -5,6 +7,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 32px;
+
+  @include mixins.phone(){
+    padding: 24px 20px;
+  }
 }
 
 .overviewBillsContent {
