--- a/frontend/src/components/overview/budgets/OverviewBudgets.scss
+++ b/frontend/src/components/overview/budgets/OverviewBudgets.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/mixins';
+
 .overviewBudgets {
   border-radius: 12px;
   background-color: var(--component-background-bright);
@@ -5,6 +7,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+
+  @include mixins.phone(){
+    padding: 24px 20px;
+  }
 }
 
 .overviewBudgetsContent {
@@ -12,10 +18,21 @@
   display: grid;
   grid-template-columns: auto fit-content(100%);
   column-gap: 16px;
+
+  @include mixins.phone(){
+    grid-template-columns: 1fr;
+  }
 }
 
 .overviewBudgetsValues {
   display: flex;
   flex-direction: column;
   row-gap: 16px;
+
+  @include mixins.phone(){
+    margin-top: 16px;
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: 1fr 1fr;
+  }
 }
