--- a/frontend/src/components/overview/pots/PotsSummary.scss
+++ b/frontend/src/components/overview/pots/PotsSummary.scss
@@ -22,6 +22,9 @@
 .overviewPotsSummaryContentValue {
   font-size: 36px;
   font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   color: var(--text-dark);
 }
 
