--- a/frontend/src/components/overview/transactions/OverviewTransactions.scss
+++ b/frontend/src/components/overview/transactions/OverviewTransactions.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/mixins';
+
 .overviewTransactions {
   border-radius: 12px;
   background-color: var(--component-background-bright);
@@ -5,4 +7,8 @@
   display: grid;
   grid-template-rows: auto auto;
   row-gap: 32px;
+
+  @include mixins.phone(){
+    padding: 24px 20px;
+  }
 }
