--- a/frontend/src/components/searchbar/SearchbarInput.scss
+++ b/frontend/src/components/searchbar/SearchbarInput.scss
@@ -1,3 +1,5 @@
+@use '../../styles/mixins';
+
 .searchbarInputContainer {
   flex-grow: 1;
 }
@@ -7,7 +9,11 @@
   border: 1px solid var(--searchbar-grey);
   padding: 14px 48px 12px 18px;
   width: 100%;
+  min-width: 120px;
   color: var(--text-dark);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   transition:
           border 0.3s ease,
           border-color 0.3s ease,
