--- a/frontend/src/pages/TransactionsPage.scss
+++ b/frontend/src/pages/TransactionsPage.scss
@@ -3,6 +3,14 @@
   margin-left: 24px;
 }
 
+.searchbarLabelWrapper {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: flex-end;
+}
+
 .transactionsPage {
   padding: 32px 40px;
   height: 100%;
@@ -32,9 +40,11 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   font-size: 15px;
   color: var(--text-grey);
+  row-gap: 16px;
 }
 
 .transactionsTable {
