--- a/frontend/src/components/transactions/pagination/PaginationButtonPrev.scss
+++ b/frontend/src/components/transactions/pagination/PaginationButtonPrev.scss
@@ -1,4 +1,7 @@
+@use '../../../styles/mixins';
+
 .paginationButtonPrev {
+  margin-right: 8px;
   border-radius: 8px;
   border: 1px solid var(--searchbar-grey);
   background-color: var(--component-background-bright);
@@ -12,6 +15,10 @@
           border-color 0.3s ease,
           background-color 0.3s ease,
           box-shadow 0.3s ease;
+
+  @include mixins.phone() {
+    padding: 12px 1px 10px 15px;
+  }
 }
 .paginationButtonPrev.isEnabled:hover {
   border: 1px solid var(--component-background-grey);
