--- a/frontend/src/components/transactions/table/TableRowSmall.scss
+++ b/frontend/src/components/transactions/table/TableRowSmall.scss
@@ -4,10 +4,16 @@
   text-overflow: ellipsis;
 }
 
+.tableRowSmallDate {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .tableRowSmallNameCategoryWrapper {
+  min-width: 0;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex-shrink: 1;
   row-gap: 8px;
 }
 
@@ -24,6 +30,7 @@
 }
 
 .tableRowSmallPartnerName {
+  flex-shrink: 1;
   font-weight: 700;
   color: var(--text-dark);
   white-space: nowrap;
@@ -52,8 +59,8 @@
 
 .transactionsTableRowSmall {
   padding: 0 16px;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 32px calc(100% - 112px) 80px;
   column-gap: 12px;
   align-items: center;
   font-size: 13px;
