--- a/frontend/src/pages/BudgetsPage.scss
+++ b/frontend/src/pages/BudgetsPage.scss
@@ -1,7 +1,14 @@
+@use '../styles/mixins';
+
 .budgetsDetails {
   display: grid;
-  grid-template-columns: 40% calc(60% - 24px);
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   column-gap: 24px;
+
+  @include mixins.tablet-and-down() {
+    grid-template-columns: 1fr;
+    row-gap: 24px;
+  }
 }
 
 .budgetsDetailsRight {
