--- a/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
+++ b/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/mixins';
+
 .budgetsDiagramCard {
   border-radius: 12px;
   background-color: var(--component-background-bright);
@@ -5,6 +7,14 @@
   display: flex;
   flex-direction: column;
   row-gap: 32px;
+
+  @include mixins.tablet-and-down() {
+    padding: 21px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 16px;
+    align-items: center;
+  }
 }
 
 .budgetsDiagramCardDetails {
