fe-12 add styling for mobile view

--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -1,3 +1,5 @@
+@use '../styles/mixins';
+
 .cardHeader {
   display: flex;
   flex-direction: row;
@@ -34,4 +36,8 @@
   flex-grow: 1;
   font-size: 20px;
   font-weight: 600;
+
+  @include mixins.phone() {
+    font-size: 16px;
+  }
 }
