--- a/frontend/src/components/budgets/BudgetCard/BudgetCardList.scss
+++ b/frontend/src/components/budgets/BudgetCard/BudgetCardList.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/mixins';
+
 .budgetCardList{
   border-radius: 12px;
   background-color: var(--page-background);
@@ -18,12 +20,20 @@
   font-size: 16px;
   font-weight: 600;
   color: var(--text-dark);
+
+  @include mixins.phone() {
+    font-size: 14px;
+  }
 }
 
 .budgetCardListHeaderLink {
   font-size: 14px;
   text-decoration: none;
   color: var(--text-grey);
+
+  @include mixins.phone() {
+    font-size: 12px;
+  }
 }
 
 .budgetCardListHeaderLinkCaret {
