--- a/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
+++ b/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/mixins';
+
 .budgetCard {
   border-radius: 12px;
   background-color: var(--component-background-bright);
@@ -5,6 +7,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+
+  @include mixins.phone() {
+    padding: 16px;
+  }
 }
 
 .budgetCardBar {
@@ -37,7 +43,11 @@
 
 .budgetCardBarLabel {
   font-size: 14px;
-  color: var(--text-grey)
+  color: var(--text-grey);
+
+  @include mixins.phone() {
+    font-size: 12px;
+  }
 }
 
 .budgetCardBarMax {
