--- a/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
+++ b/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCard.scss
@@ -13,7 +13,14 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 16px;
+    row-gap: 16px;
     align-items: center;
+  }
+
+  @include mixins.phone() {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -21,11 +28,19 @@
   display: flex;
   flex-direction: column;
   row-gap: 24px;
+
+  @include mixins.phone() {
+    width: 100%;
+  }
 }
 
 .budgetsDiagramCardDetailsLabel {
   font-size: 20px;
   font-weight: 600;
+
+  @include mixins.phone() {
+    font-size: 16px;
+  }
 }
 
 .budgetsDiagramCardDetailsLine {
