--- a/frontend/src/components/pots/PotCard.scss
+++ b/frontend/src/components/pots/PotCard.scss
@@ -1,3 +1,5 @@
+@use '../../styles/mixins';
+
 .potCard {
   border-radius: 12px;
   background-color: var(--component-background-bright);
@@ -5,6 +7,11 @@
   display: flex;
   flex-direction: column;
   row-gap: 32px;
+
+  @include mixins.phone() {
+    padding: 16px;
+    min-width: 0;
+  }
 }
 
 .potCardButton {
@@ -14,6 +21,8 @@
   padding: 16px;
   font-weight: 600;
   color: var(--text-dark);
+  cursor: pointer;
+  white-space: nowrap;
 }
 
 .potCardButtons {
