--- a/frontend/src/pages/PotsPage.scss
+++ b/frontend/src/pages/PotsPage.scss
@@ -1,13 +1,19 @@
+@use '../styles/mixins';
+
 .potsPage {
   padding: 32px 40px;
   display: flex;
   flex-direction: column;
   row-gap: 32px;
+
+  @include mixins.phone() {
+    padding: 24px 16px;
+  }
 }
 
 .potPageGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, (minmax(350px, 1fr)));
+  grid-template-columns: repeat(auto-fit, (minmax(270px, 1fr)));
   column-gap: 24px;
   row-gap: 24px;
 }
