fe-18 add styling for tablet view

--- a/frontend/src/components/bills/BillCardTableRow.scss
+++ b/frontend/src/components/bills/BillCardTableRow.scss
@@ -35,6 +35,12 @@
   font-weight: 600;
 }
 
+.billCardTableRowNameLabel {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .billCardTableRowNamePicture {
   margin-right: 16px;
   border-radius: 50%;
