--- a/frontend/src/pages/PotsPage.scss
+++ b/frontend/src/pages/PotsPage.scss
@@ -13,7 +13,11 @@
 
 .potPageGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, (minmax(270px, 1fr)));
+  grid-template-columns: repeat(auto-fit, (minmax(350px, 1fr)));
   column-gap: 24px;
   row-gap: 24px;
+
+  @include mixins.phone() {
+    grid-template-columns: repeat(auto-fit, (minmax(270px, 1fr)));
+  }
 }
