--- a/frontend/src/pages/BillsPage.scss
+++ b/frontend/src/pages/BillsPage.scss
@@ -7,6 +7,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 32px;
+
+  @include mixins.phone() {
+    padding: 24px 16px;
+  }
 }
 
 .billsPageDetails {
@@ -29,5 +33,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 24px;
+  }
+
+  @include mixins.phone() {
+    display: flex;
+    flex-direction: column;
   }
 }
