--- a/frontend/src/components/bills/BillCard.scss
+++ b/frontend/src/components/bills/BillCard.scss
@@ -1,3 +1,5 @@
+@use '../../styles/mixins';
+
 .billCard {
   border-radius: 12px;
   background-color: var(--component-background-bright);
@@ -5,6 +7,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 24px;
+
+  @include mixins.phone() {
+    padding: 16px;
+  }
 }
 
 .billCardTableHeader{
